qt4-x11 (4:4.6.2-3) experimentalUNRELEASED; urgency=low

 -- Sune Vuorela <debian@pusling.com>  Fri, 09 Apr 2010 01:37:15 +0200

qt4-x11 (4:4.6.2-2) experimental; urgency=low

  [ Fathi Boudra ]
  * Add upstream patches:
    - 0001_qpixmap_load_no_modify_referenced_copies.diff
      Fixed QPixmap::load() to not modify referenced copies.
    - 0002_qmake_qfileinfo_absolutepath.diff
      Fixed QFileInfo::absolutePath() warning when running "qmake -project"
      (Closes: #574043)
  * Fix FTBFS on sparc caused by a wrong platform_arg value:
    check for exact string match (instead of findstring usage).
  * Fix FTBFS on ia64: -m64 option isn't recognized by gcc.
    set platform_arg to linux-g++ on this architecture.
  * Switch to dpkg-source 3.0 (quilt).
  * Fix some lintian warnings.
  * Add libqt4-phonon lintian overrides.
  * Update applications icons.

  [ Pino Toscano ]
  * Make more use of the dpkg source 3.0 format: directly ship the binary files
    (PNG icons and qch) instead of uuencode them at install time.
  * Fix watch file to report only stable versions (ie non-tp and non-rc ones).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 04 Apr 2010 09:51:36 +0200

qt4-x11 (4:4.6.2-1) experimental; urgency=low

  * New upstream release (Closes: #571990).
    - Fix a crash in QDBusPendingReply/QDBusReply in case of unconnected calls.
      (Closes: #560838)
    - Fix FTBFS on GNU/kFreeBSD due to lack of WTF_USE_JSVALUE64.
      (Closes: #565731)

  [ Modestas Vainius ]
  * Change my email address to @debian.org one.
  * Restore binary compatibility with binaries built with g++-4.3 on armel
    (patch 92_armel_gcc43_valist_compat.diff). (Closes: #566259)
  * Add symbol files for Qt public libraries. They are based on the 4:4.5.3
    version and upgraded to 4:4.6.1/4:4.6.2 on amd64/i386.
  * Bump build dependency of pkg-kde-tools to version 0.6.4 as it is needed to
    handle symbol files.